--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,8 @@
 body {
   background: linear-gradient(
-    to top,
-    #505285 0%,
-    #585e92 12%,
-    #65689f 25%,
-    #7474b0 37%,
-    #7e7ebb 50%,
-    #8389c7 62%,
-    #9795d4 75%,
-    #a2a1dc 87%,
-    #b5aee4 100%
+    90deg,
+    rgb(255, 157, 129) 24.3%,
+    rgb(255, 78, 78) 78.3%
   );
 }
 
@@ -25,7 +18,7 @@ footer {
 
 .Weather {
   font-family: "Cerebri-Sans", Helvetica, Arial, sans-serif;
-  background: #fff;
+  background: transparent;
   border-radius: 16px;
   box-shadow: 0px 30px 50px rgba(65, 50, 100, 0.08);
   padding: 40px;
@@ -39,7 +32,7 @@ footer {
 }
 
 .Weather .search-input {
-  background: #f9f7fe;
+  background: transparent;
   border: none;
   padding: 15px 20px;
   display: inline-block;
@@ -51,7 +44,7 @@ footer {
 }
 
 .Weather .btn {
-  background: #5e63b6;
+  background: transparent;
   font-weight: bold;
   font-size: 16px;
   padding: 15px 0;
@@ -61,7 +54,7 @@ footer {
 
 .Weather .search-input::placeholder {
   line-height: 20px;
-  color: rgba(39, 33, 66, 0.4);
+  color: #f9f7fe;
 }
 
 .Weather h1 {
@@ -139,28 +132,20 @@ footer {
   font-size: 16px;
   line-height: 20px;
   text-align: center;
+  font-weight: 700;
   color: rgba(39, 33, 66, 0.4);
 }
 
 .WeatherForecast .forecast-temperature {
   font-style: normal;
   font-size: 18px;
-  line-height: #f65282;
   font-weight: bold;
-}
-
-.WeatherForecast .forecast-temperature-min {
-  margin-left: 10px;
-  opacity: 0.6;
+  color: #272142;
 }
 
 .Weather .WeatherForecast img {
   display: block;
   margin: 20px auto;
-}
-
-.WeatherInfo {
-  margin-top: 20px;
 }
 
 .WeatherInfo .temperature-container {
